feat: full theme-aware rewrite of Services and CaseStudy components - Added dynamic CaseStudyPage - Updated design tokens across components - Cleaned JSX structure and closed tags - Improved layout consistency

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -6,7 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Collinalitics</title>
+
+    <!-- Early theme loader -->
+    <script>
+      (function () {
+        try {
+          const saved = localStorage.getItem('theme'); // 'light'|'dark'
+          const prefersLight =
+            window.matchMedia &&
+            window.matchMedia('(prefers-color-scheme: light)').matches;
+
+          const theme =
+            saved === 'light' || saved === 'dark'
+              ? saved
+              : prefersLight
+              ? 'light'
+              : 'dark';
+
+          document.documentElement.setAttribute('data-theme', theme);
+        } catch (e) {}
+      })();
+    </script>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
